--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       NODE_ENV: development
     ports:
     - "3000:3000"
+    depends_on:
+      - mongo
   mongo:
     image: "mongo:latest"
