--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "docker-compose run -d web npx nodemon ./bin/www",
+    "build": "docker-compose build",
+    "up": "docker-compose up -d",
+    "down": "docker-compose down",
+    "logs-web": "docker-compose logs -f web"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
