--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,10 @@ services:
       - mongo
   mongo:
     image: "mongo:latest"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+     - "mongo-data:/data/db"
+volumes:
+  mongo-data:
