mv application file to src/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build: .
     environment:
       NODE_ENV: development
-    command: bash -c "npx nodemon app.js"
+    command: bash -c "npx nodemon src/app.js"
     volumes:
-      - .:/home/node/express-mongo
+      - .:/express-mongo
     ports:
       - "3000:3000"
     depends_on:
