--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "mongoose": "^5.6.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "prettier": "^1.18.2"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
@@ -24,6 +25,19 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^3.0.3",
+    "lint-staged": "^9.2.1",
     "nodemon": "^1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
