--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
-    "nodemon": "^1.19.1"
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1",
+    "sinon": "^7.4.1"
   },
   "husky": {
     "hooks": {
